# html_parser

./: .gitignore  README.md  cropped.html  demo.txt  main.py  parse.py  pyproject.toml  requirements.txt  start_testing.sh
core/: main.py
src/: source.html  source2.html  source3.html
tests/: main_test.py
