[tool.poetry]
name = "html-parser"
version = "0.1.0"
description = "Package for splitting HTML files"
authors = ["mizmorr <safonov.ilya22@gmail.com>"]
readme = "README.md"
packages = [{include = "html_parser"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
